--- a/firstpage.html
+++ b/firstpage.html
@@ -128,7 +128,7 @@
                 
                 <!-- Mobile Header: Title + Menu Button -->
                 <div class="flex justify-between items-center mb-6 md:hidden">
-                    <h1 class="text-2xl font-bold text-cyan-400 neon-title">OpportunityHub</h1>
+                    <h1 class="text-2xl font-bold text-cyan-400 neon-title">Siksha Sethu</h1>
                     <button id="menu-toggle-button" class="p-2 rounded-lg bg-gray-800 text-cyan-400">
                         <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" /></svg>
                     </button>
