--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         SIKSHA SETHU
                     </h1>
                     <p class="mt-6 text-xl sm:text-2xl text-white/90 max-w-2xl mx-auto">
-                        Your Smart Bridge to Scholarships and Internships. Portal which connects students with Internship and Scholarship with Ai-integration .
+                        Your Smart Bridge to Scholarships and Internships. Portal which connects students to Internship and Scholarship with Ai-integration .
                     </p>
 
                     <div class="mt-10 flex flex-col sm:flex-row justify-center items-center gap-4 sm:gap-6">
